--- a/manifest.json
+++ b/manifest.json
@@ -54,7 +54,9 @@
             },
             "ios" : {},
             /* ios打包配置 */
-            "sdkConfigs" : {}
+            "sdkConfigs" : {
+                "oauth" : {}
+            }
         }
     },
     /* SDK配置 */
